Add background image and more css styling to get closer to final design

--- a/index.html
+++ b/index.html
@@ -13,27 +13,50 @@
     <div class="container">
         <div class="left">
             <div class="logo">OptiLife</div>
-            <div class="credit">Photo by <a href="https://unsplash.com/@efro247?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Eric  Froehling</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+            <div class="credit">Photo by <a
+                    href="https://unsplash.com/@efro247?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Eric
+                    Froehling</a> on <a
+                    href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </div>
         </div>
         <div class="right">
-            <div class="top"></div>
-            <div class="form">
+            <div class="top">
+                <h1>You can live the OptiLife</h1>
+                <p>Sign up now to achiece your wildest dreams. Not an actual product or website.</p>
+            </div>
+            <div class="form-container">
                 <form action="" method="get" id="sign_up">
-                    <div class="form-left">
-                        <label for="first_name">First Name:</label>
-                        <input type="text" name="first_name" id="first_name">
-                        <label for="email">Email:</label>
-                        <input type="email" name="email" id="email">
-                        <label for="password">Password:</label>
-                        <input type="password" name="password" id="password">
-                    </div>
-                    <div class="form-right">
-                        <label for="last_name">Last Name:</label>
-                        <input type="text" name="last_name" id="last_name">
-                        <label for="phone">Phone Number:</label>
-                        <input type="tel" name="phone" id="phone">
-                        <label for="confirm">Confirm Password:</label>
-                        <input type="password" name="confirm" id="confirm">
+                    <div class="flex-outer">
+                        <div class="form-top">
+                            <div>
+                                <p><label for="first_name">First Name:</label></p>
+                                <input type="text" name="first_name" id="first_name">
+                            </div>
+                            <div>
+                                <p><label for="last_name">Last Name:</label></p>
+                                <input type="text" name="last_name" id="last_name">
+                            </div>
+                        </div>
+                        <div class="form-middle">
+                            <div>
+                                <p><label for="email">Email:</label></p>
+                                <input type="email" name="email" id="email">
+                            </div>
+                            <div>
+                                <p><label for="phone">Phone Number:</label></p>
+                                <input type="tel" name="phone" id="phone">
+                            </div>
+                        </div>
+                        <div class="form-bottom">
+                            <div>
+                                <p><label for="password">Password:</label></p>
+                                <input type="password" name="password" id="password">
+                            </div>
+                            <div>
+                                <p><label for="confirm">Confirm Password:</label></p>
+                                <input type="password" name="confirm" id="confirm">
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -44,7 +67,7 @@
             </div>
         </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
