Add most styling components

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up-Form</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="left">
-            <div class="logo">OptiLife</div>
+            <div class="logo"><img src="./assets/spiral.png" alt="logo" width="100px"><h1>OptiLife</h1></div>
             <div class="credit">Photo by <a
                     href="https://unsplash.com/@efro247?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Eric
                     Froehling</a> on <a
@@ -22,7 +26,7 @@
         <div class="right">
             <div class="top">
                 <h1>You can live the OptiLife</h1>
-                <p>Sign up now to achiece your wildest dreams. Not an actual product or website.</p>
+                <p>Sign up now to achieve your wildest dreams. Not an actual product or service.</p>
             </div>
             <div class="form-container">
                 <form action="" method="get" id="sign_up">
@@ -61,9 +65,9 @@
                 </form>
             </div>
             <div class="bottom">
-                <button type="submit" form="sign_up">Create Account</button>
+                <button type="submit" form="sign_up">CREATE ACCOUNT</button>
                 <p>I have read and and agree to the <a href="#">Terms of Service</a></p>
-                <p>Already have an account?<a href="#">Login</a></p>
+                <p>Already have an account? <a href="#">Login</a></p>
             </div>
         </div>
     </div>
