Arrange layout using css to allow for resizing

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                     <div class="flex-outer">
                         <div class="form-top">
                             <div>
-                                <p><label for="first_name">First Name:</label></p>
-                                <input type="text" name="first_name" id="first_name">
+                                <p><label for="first_name">First Name*:</label></p>
+                                <input type="text" name="first_name" id="first_name" required>
                             </div>
                             <div>
-                                <p><label for="last_name">Last Name:</label></p>
-                                <input type="text" name="last_name" id="last_name">
+                                <p><label for="last_name">Last Name*:</label></p>
+                                <input type="text" name="last_name" id="last_name" required>
                             </div>
                         </div>
                         <div class="form-middle">
                             <div>
-                                <p><label for="email">Email:</label></p>
-                                <input type="email" name="email" id="email">
+                                <p><label for="email">Email*:</label></p>
+                                <input type="email" name="email" id="email" required>
                             </div>
                             <div>
                                 <p><label for="phone">Phone Number:</label></p>
@@ -53,12 +53,12 @@
                         </div>
                         <div class="form-bottom">
                             <div>
-                                <p><label for="password">Password:</label></p>
-                                <input type="password" name="password" id="password">
+                                <p><label for="password">Password*:</label></p>
+                                <input type="password" name="password" id="password" required>
                             </div>
                             <div>
-                                <p><label for="confirm">Confirm Password:</label></p>
-                                <input type="password" name="confirm" id="confirm">
+                                <p><label for="confirm">Confirm Password*:</label></p>
+                                <input type="password" name="confirm" id="confirm"  required>
                             </div>
                         </div>
                     </div>
